Fix header z-index

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 50;
+  z-index: 60;
   .container{
     width: 100%;
     max-width: 100%;
